<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.decathlon.obarhdad.myappdecathlon.MainActivity">

    <LinearLayout
        android:id="@+id/lLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_decathlon_logo" />

        <EditText
            android:id="@+id/pEmail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="11dp"
            android:background="@drawable/rectangle"
            android:hint="@string/person_email_hint"
            android:inputType="textEmailAddress"
            android:padding="3dp" />

        <EditText
            android:id="@+id/pPassword"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="11dp"
            android:background="@drawable/rectangle"
            android:hint="@string/person_password_hint"
            android:inputType="textPassword"
            android:padding="3dp" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="@dimen/activity_layout_with_l"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/colorButton"
            android:text="@string/person_login"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lLogin"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/bCreateAccount"
            android:layout_width="@dimen/activity_layout_with_l"
            android:layout_height="@dimen/activity_layout_height_l"
            android:layout_centerInParent="true"
            android:background="@color/colorButton"
            android:text="@string/person_create_account"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</RelativeLayout>
