<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_decathlon_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hello"
            android:textColor="@color/colorButton"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tNameHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/hello"
            android:textColor="@android:color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/prefered_store"
        android:textColor="@android:color/black"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/tPreferedStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:textColor="@android:color/black"
        android:textSize="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tIdTitle"
                android:layout_width="@dimen/activity_layout_height_l"
                android:layout_height="wrap_content"
                android:text="@string/store_id"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tNameTitle"
                android:layout_width="@dimen/activity_layout_height_l"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tDirectorTitle"
                android:layout_width="@dimen/activity_layout_height_l"
                android:layout_height="wrap_content"
                android:text="@string/store_director"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tCountryTitle"
                android:layout_width="@dimen/activity_layout_height_l"
                android:layout_height="wrap_content"
                android:text="@string/store_country"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tAdressTitle"
                android:layout_width="@dimen/activity_layout_height_l"
                android:layout_height="wrap_content"
                android:text="@string/store_adress"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/hello"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <Button
            android:id="@+id/bChangeStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="18dp"
            android:text="@string/store_change"
            android:textColor="@android:color/black"
            android:textSize="13dp" />
    </LinearLayout>

    <Button
        android:id="@+id/bLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:background="@color/colorButton"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="13dp" />
</LinearLayout>